[package]
name = "squirrel-sys"
version = "0.1.1"
authors = ["robbymadruga@gmail.com"]
description = "FFI bindings to the squirrel language."
readme = "README.md"
license = "MIT"
repository = "https://github.com/robbym/squirrel-sys"
homepage = "https://github.com/robbym/squirrel-sys"
build = "build.rs"

[build-dependencies]
bindgen = "0.23"
cmake = "0.1"
