[package]
name = "squirrel-sys"
version = "0.2.0"
authors = ["robbymadruga@gmail.com"]
description = "FFI bindings to the squirrel language."
readme = "README.md"
license = "MIT"
repository = "https://github.com/robbym/squirrel-sys"
homepage = "https://github.com/robbym/squirrel-sys"
build = "build.rs"
edition = "2018"

[build-dependencies]
bindgen = "0.52.0"
cmake = "0.1.42"
